--- a/documentation.Rmd
+++ b/documentation.Rmd
@@ -37,3 +37,8 @@ Repeat this process to add all the points that you need. If you have any mistake
 The tool automatically will create the model and it will show the different coefficients for the polynomial equation and the R square value to give you an idea about how precise is your model. 
 
 
+## Github repository
+
+All the code from this project is available in the following url: 
+
+https://github.com/rdiaz82/data_products_week_4
